--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,9 +1,10 @@
 .main{
     margin: auto;
-    padding: 60px 0;
+    padding: 15vh 0;
     margin-bottom: 25px;
     background-color: #ECE9DF;
     color: #333333;
+    height: 100vh;
 }
 
 .form{
